Major changes in content

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -69,22 +69,22 @@
 </nav>
 
   <!-- ======= Hero Section ======= -->
-  <section id="about-page" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-      <h1 align="center"><b>Hello Again! 👋🏽</b></h1>
-    </div>
-  </section><!-- End Hero -->
+    <section id="about-page" class="d-flex flex-column justify-content-center">
+      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <h1 align="center"><b>Hello Again! 👋</b></h1>
+
+        <div class="devicer"></div>
+      </div>
+    </section>
 
   <main id="main">
 
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-
-          <p class ="justified paragraph">
+      <div class="container uppermargin" data-aos="fade-up">
+      <p class ="justified paragraph">
 		  Glad you stopped by! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) to build better products.</p>
 
 
@@ -95,25 +95,25 @@
             <p class="justified paragraph">
               <h3> Me in a nutshell...</h3>
               <p class="justified paragraph">
-              Do you know? I've been fortunate enough to help people who need assistance my entire life. Motivation? My mother is physically challenged. My aim has always been to make things as easy as possible for her by her side. This feeling transitioned towards the community, and now I want to make things easy for everyone. This drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate (Let's Go Retrievers!). As a HCI Research Assistant, working on accessibility projects has taught me loads of research methods, and more importantly, to put empathy at the forefront while not losing sight of my passion. Under the supervision of Dr. Ravi Kuber, we submitted two papers to The International ACM SIGACCESS Conference on Computers and Accessibility. Two years of research have taught me that anything is possible; perseverance is the key.
+              Do you know? I've been fortunate enough to help people who need assistance my entire life. Motivation? People who need increased assistance. My aim has always been to make things as easy as possible for people with disabilities; a feeling directed towards the community. This drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate (Go Retrievers!! 🐶). As a HCI Research Assistant, working on accessibility projects has taught me loads of research methods, and more importantly, to put empathy at the forefront while not losing sight of my passion. Under the supervision of Dr. Ravi Kuber, we submitted two papers to The International ACM SIGACCESS Conference on Computers and Accessibility. Our paper titled "Investigating the navigational habits of people who are blind in India" is set to appear at ASSETS 2021. I worked on a collaborative project funded by TOYOTA to build a wearable belt and increase assistance for blind runners in their path. Two years of research have taught me that anything is possible; perseverance is the key.
              </p>
 
-              <p class="justified paragraph"> Parallel to working as a HCI Research Assistant, I worked as a UX Researcher with the Shared Services Center team of the University. I conducted heuristic evaluations, statistical analysis learned from course works (Human-Centered Computing) and books (Quantifying the User Experience by Jeff Sauro) as a part of my research to revamp the current website design.
+              <p class="justified paragraph"> Parallel to working as a HCI Research Assistant, I worked as a contracted UX Researcher with the Shared Services Center team of the University. I conducted Heuristic evaluations, conducted contextual analysis as a part of my research to revamp the website design that yielded successful results.
               </p>
 
               <p class="justified paragraph"> Before my master's journey began, I worked as a Software Engineer in the UI/UX team with L&T Infotech in Bangalore, India. I know what it means to wear the developer's hat while designing a product and the sweetness of interacting with peers while plying my trade in a cross-functional setup. </p>
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="justified paragraph">
-             By leveraging UX Research, I get into the minds of the users whom businesses serve. I help identify the clients and stakeholders needs, thereby looking to increase the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. P.S. I am also a huge fan of Web Accessibility! :) </p>
+             By leveraging UX Research, I get into the minds of the users whom businesses serve. I help identify the clients and stakeholders needs, thereby looking to increase the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. P.S. I am also a huge fan of Web Accessibility and I will take the IAAP- CPACC certification soon. With solid hardware and software research expirience under my belt, I am adept at human-human interaction, bringing the best of the information from the users.</p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
             <div class="row">
-              <div class="col-md-6">
-                <p class="justified paragraph">When idle, books offer a place of solace. I love reading about mythology and modern history. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
+              <div class="col-md-8">
+                <p class="justified paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
                   <p class="justified paragraph">Apart from that, I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. A highlight moment while traveling you may ask? I scaled a Himalayan peak the Kedarkantha (12,500 ft feet above sea level.)   </p>
               </div>
-              <div class="col-md-4 offset-1">
+              <div class="col-md-4">
                 <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="">
               </div>
             </div>
@@ -129,6 +129,7 @@
 
     </section><!-- End About Section -->
 
+<!--
 
     <section class="containerblue">
       <div class="container">
