--- a/coeit-research.html
+++ b/coeit-research.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
       </li>
 
       <li class="nav-item active">
@@ -77,21 +77,22 @@
 </nav>
 
   <main>
-	<section id="hero-page4" class="d-flex flex-column justify-content-center">
-		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>College of Engineering and Information Technology's Research Website</h1>
-       </div>
+    <section id="hero-page" class="d-flex flex-column justify-content-center">
+  		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-      </div>
-    </section>
+  			<h1>College of Engineering and Information Technology's Research Website</h1>
+  		</div>
+  		<div class="uppermargin">
+   			<div class="devicer"></div>
+  		</div>
+  </section><!-- End Portfolio Details -->
 
-    <section>
-    <div class="container uppermargin">
 
-    			<p class="justified">
+    <div class="container">
+      		<p class="justified">
     				<h3><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> The client, the College of Engineering and Information technology (COEIT) of the University of Maryland, Baltimore County, highlighted some problems in their research website.  </b>The website serves as an information hub  the various dimensions, ranging from the departments, faculty to the myriad of projects. The COEIT prides itself on the excellent research that is conducted in the labs of the various departments . (For example, the Interactive Systems Research Center (ISRC)), fostering a collaborative environment.
+    					<b class="textbackground3"> The client, the College of Engineering and Information technology (COEIT) of the University of Maryland, Baltimore County, highlighted some problems in their research website.  </b>The website serves as an information hub  the various dimensions, ranging from the departments, faculty to the myriad of projects. The COEIT prides itself on the excellent research that is conducted in the labs of the various departments - for example, the Interactive Systems Research Center (ISRC), fostering a collaborative environment.
 
     				</p>
     			</p>
@@ -133,8 +134,6 @@
     		    I think this button is a little weird, it’s on like every page Did you find what you were looking for today? It looks like a button but it is actually a link in a box. That's kinda weird. I don’t want to go there, it scares me.
     	</blockquote>
 
-
-    </section>
 
 
 <div class="container">
