--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -77,16 +77,17 @@
 </nav>
 
   <main>
-	<section id="hero-page4" class="d-flex flex-column justify-content-center">
-		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Shared Services Center website research redesign</h1>
-       </div>
+    <section id="hero-page" class="d-flex flex-column justify-content-center">
+  		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-      </div>
-    </section>
+  			<h1>Shared Services Center website research redesign</h1>
+  		</div>
+  		<div class="uppermargin">
+   			<div class="devicer"></div>
+  		</div>
+  </section><!-- End Portfolio Details -->
 
-    <section>
-    <div class="container uppermargin">
+    <div class="container">
 
     			<p class="justified">
     				<h3><b>What's this about?</b></h3>
@@ -127,7 +128,6 @@
     </ul>
 
     </div>
-    </section>
 
     	<blockquote class="otro-blockquote">
     		I have been to this website before, so I know what is happening. If I was new, I would just be staring at it.
