--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 <body>
 
-  <nav class="navbar navbar-default1 navbar-expand-lg navbar-light light">
+
+  <nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default1 navbar-expand-lg navbar-light light">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -67,23 +68,35 @@
   <!-- ======= Hero Section ======= -->
 
   <section id="hero" class="d-flex flex-column justify-content-center">
+  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh.</b></h2>
+      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <div class="uppermargin">
 
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="">
+            </div>
+          <div class="col-md-9">
+            <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+        </div>
+      </div>
+    </div>
 
+         <!--
           <h2 align="center" aria-label="Header Title" alt="Hello there! 👋🏽 I am Anirudh."><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
           <!-- <h3 style="color:#000; font-family: Raleway, sans-serif !important;" align="center"><b>Welcome to my website!</b></h3>
-          -->
+
             <img src="assets/img/Personal/Main Image 4.png" class="avatar6" alt="">
 
-      <p class="paragraph3" align="center">As a <b class="textbackground2"> UX Researcher</b>, I come with an engineering background and a deep rooted passion for inclusive design. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+      <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
 
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
-    </div>
   </section><!-- End Hero -->
 
-  <main id="main">
+  <div class="devicer"></div>
 
+  <main id="main">
 <section>
   <div class="container">
     <h1 class="uppermargin paragraph4"> I've done a variety of projects.</h1>
