--- a/mobileapp.html
+++ b/mobileapp.html
@@ -10,7 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="assets/img/Personal/Logo3.png" rel="icon">
+	<link href="assets/img/Personal/Logo3
+	.png" rel="icon">
 	<link href="assets/img/Personal/Logo3.png" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
@@ -47,7 +48,7 @@
 </nav><!-- .nav-menu
 
 </header> -->
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -58,7 +59,7 @@
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
       </li>
 
       <li class="nav-item active">
@@ -91,13 +92,11 @@
 	<section id="hero-page" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 			<h1>B-AID : An assistive mobile application for individuals who are blind</h1>
+			<div class="devicer"></div>
+    </div>
 		</div>
-
-	</div>
 </section><!-- End Portfolio Details -->
-
-<section>
-<div class="container uppermargin">
+<div class="container">
 
 			<p class="justified">
 				<h3><b>What's this about?</b></h3>
@@ -138,7 +137,6 @@
 </ul>
 
 </div>
-</section>
 
 	<blockquote class="otro-blockquote">
 				It’s very difficult when it is heavily raining [in the monsoon season] as we have to hold an umbrella in one hand and cane in the [other] hand so navigating becomes hard for us.
@@ -355,11 +353,11 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 		From the information obtained from the discovery, ideation and the define phases, I populated the following insights.
 </p>
 	<ul class="justified">
-		<li class="paragraph justified"><b class="textbackground3"> Functions:</b>Participants look for functions to be ‘visible’ – easily identifiable.</p>
+		<li class="paragraph justified"><b class="textbackground3"> Functions:</b> Participants look for functions to be ‘visible’ – easily identifiable.</p>
 		<li class="paragraph justified"><b class="textbackground3"> Specific Information: </b>Look out for information like Bus Route Information, Bus Stop names, nearby accessible stops, etc.,</p>
 		<li class="paragraph justified"><b class="textbackground3"> Information Presentation: </b>Participants want information to be presented to them directly via the application or require fellow human to tell them navigational directions.
 		</p>
-		<li class="paragraph justified"><b class="textbackground3"> Click Rate </b> Preference with minimum clicks and maximum utility for each section of the application.	</p>
+		<li class="paragraph justified"><b class="textbackground3"> Click Rate: </b> Preference with minimum clicks and maximum utility for each section of the application.	</p>
 
 		<li class="paragraph justified">
 		<b class="textbackground3"> Information Overload:</b>	Participants mentioned that they do not want information overload when it comes to the navigation application.
