--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -48,7 +48,7 @@
 </nav><!-- .nav-menu
 
 </header> -->
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 navbar navbar-default navbar-expand-lg navbar-light light">
 
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -85,7 +85,7 @@
 		</ul>
 	</div>
 </nav>
-<main>
+<main data-aos="fade-up">
 
 	<!-- ======= Portfolio Details ======= -->
 	<section id="hero-page" class="d-flex flex-column justify-content-center">
@@ -93,22 +93,22 @@
 
 			<h1>TRIDENT - Navigational Aid for runners who are blind</h1>
 		</div>
-
-	</div>
+		<div class="uppermargin">
+ 			<div class="devicer"></div>
+		</div>
 </section><!-- End Portfolio Details -->
 
-<section>
-<div class="container uppermargin">
+<div class="container">
 
 			<p class="justified">
-				<h3><b>What's this about?</b></h3>
+				<h3><b>What's this project about?</b></h3>
 				<p class=" justified paragraph">
 					<b class="textbackground3">An industry-funded study to assess how blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
 
 				</p>
 			</p>
 
-			<h3 class ="uppermargin"><strong>My Role in this longitudinal study</strong></h3>
+			<h3 class ="uppermargin"><strong>My role in this longitudinal study</strong></h3>
 			<p class="justified paragraph">
 				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers, and a Faculty as the chief investigator.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the student team in research-related activities.</p>
 
@@ -147,9 +147,7 @@
 	Asynchronous coordination during prototype building extended the time frame of development.
 </li>
 </ul>
-
 </div>
-</section>
 
 	<blockquote class="otro-blockquote">
 		And those are like, tactical buttons, so when you can feel them, push them.
