--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -70,20 +70,18 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="about-page" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
+<div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 align="center"><b>My Work </b></h1>
-
+<div class="devicer"></div>
     </div>
   </section><!-- End Hero -->
 
-  <main id="main">
-
-
-    <section class="containerblue" id="portfolio">
-      <div class="container grid default-grid">
+  <main id="main" data-aos="fade-up">
+    <section class="container" id="portfolio">
+      <div class="container  uppermargin grid default-grid">
             <div class="row row-xs-sm sample-row">
-        <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
+        <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
           <p class="paragraph2 justified uppermargin">
             An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI research and User-Centered Design.
           </p>
@@ -94,7 +92,7 @@
           </div>
     </section>
 
-    <section class="uppermargin3">
+    <section class="containerblue uppermargin3">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>Shared Services Center website redesign</strong></h1></div>
@@ -109,7 +107,7 @@
     </section>
 
 
-    <section class="containerblue">
+    <section class="container">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>COEIT research website redesign</strong></h1></div>
@@ -123,7 +121,7 @@
           </div>
     </section>
 
-    <section class="uppermargin3">
+    <section class="containerblue uppermargin3">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID: The navigational voice Application for people who are blind</strong></h1></div>
