--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
+<nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -68,18 +68,19 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="about-page" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
+  <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 align="center"><b>Research</b></h1>
-
+  <div class="devicer"></div>
     </div>
-  </section><!-- End Hero -->
+  </section>
+<!-- End Hero -->
 
   <main id="main">
 
 
     <section>
-      <div class="container grid default-grid">
+      <div class="container uppermargin grid default-grid">
         <h3>ASSETS 2021 - PAPER ACCEPTED</h3>
         <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
         <p>
@@ -87,13 +88,12 @@
         </p>
         <section class="blockquote-section">
           <p class="quotemarks justified"><i>Assistive navigational technologies offer considerable promise to people with visual impairments.  However, uptake of these technologies has traditionally been lower in low and middle-income countries (LMICs). In this paper, we describe a qualitative study undertaken with 14 people who identify as legally-blind in India to understand their requirements, experiences, and strategies undertaken when navigating with and without technology. We highlight key nuances that impact navigational habits including strategies to navigate within busy urban environments, strategies to address the impact of the rainy season, techniques used to navigate at night, and dealing with the impact of limited infrastructure. Our findings offer guidance to developers of navigational technologies to consider incorporating cultural, contextual, and technological factors of their users into the design of their systems to cater to a more diverse audience. </i></p>
-
-              </section>
+        </section>
           <p>
             Nagraj, A., Kuber, R., Hamidi, F., SG Prasad, R. “Investigating the nvaigational habits of people who are blind in India.” In Proceedings of the ACM SIGACCESS Conference on Computers & Accessibility (ASSETS ‘21), Online Virtual Conference, October 18-22, 2021.- to Appear (Acceptance rate: 29%)
           </p>
 </div>
-<div class="devicer"></div>
+<div class="devicer2"></div>
 </section>
 
 
