--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,6 @@
 </head>
 
 <body>
-
-
 <nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default navbar-expand-lg navbar-light light">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,15 +37,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav m-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span></a>
       </li>
+
       <li class="nav-item active">
+        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span> <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
       </li>
 
-
-	  <li class="nav-item active">
+	  <li class="nav-item">
         <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
     <!--  <li class="nav-item dropdown">
@@ -67,7 +69,6 @@
     </ul>
   </div>
 </nav>
-
   <!-- ======= Hero Section ======= -->
   <section id="about-page" class="d-flex flex-column justify-content-center">
 
@@ -79,7 +80,7 @@
 
   <main id="main" data-aos="fade-up">
     <section class="container" id="portfolio">
-      <div class="container  uppermargin grid default-grid">
+      <div class="container uppermargin grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
           <p class="paragraph2 justified uppermargin">
