--- a/about.html
+++ b/about.html
@@ -61,6 +61,11 @@
         <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
       </li>
 
+
+      	  <li class="nav-item active">
+              <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span><span class="sr-only">(current)</span></a>
+            </li>
+
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
       </li>
