--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
 
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav m-auto justify-content-center">
+
+          <li class="nav-item active">
+            <a class="nav-link active" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
+          </li
         <li class="nav-item active">
-          <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
@@ -74,7 +78,7 @@
 
           <div class="row">
             <div class="col-md-3">
-              <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="">
+              <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="Image of Anirudh Nagraj standing with folded arms.">
             </div>
           <div class="col-md-9">
             <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
