--- a/research.html
+++ b/research.html
@@ -45,6 +45,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
       </li>
+
+
+            <li class="nav-item active">
+              <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span><span class="sr-only">(current)</span></a>
+            </li>
+
 	  <li class="nav-item active">
         <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
