Alt text commits

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
 
 
-            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
+            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="Circular image of Anirudh Nagraj">
 
 
             <p class="justified paragraph">
@@ -119,7 +119,7 @@
                   <p class="justified paragraph">Apart from that, I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. A highlight moment while traveling you may ask? I scaled a Himalayan peak the Kedarkantha (12,500 ft feet above sea level.)   </p>
               </div>
               <div class="col-md-4">
-                <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="">
+                <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
               </div>
             </div>
             <h3 class="uppermargin" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
