--- a/coeit-research.html
+++ b/coeit-research.html
@@ -115,7 +115,7 @@
            <b class="textbackground3"> Employ the Design thinking process and user research to provide recommendations </b> to improve the current website of the COEIT research division. </p>
 
 
-    			<img src="assets/img/Personal/CR.png" class="avatar9 uppermargin" alt="">
+    			<img src="assets/img/Personal/CR.png" class="avatar9 uppermargin" alt="Mockup containing the redesigned page">
 
 
     <h3 class ="uppermargin"><strong>Challenges in compiling the recommendations</strong></h3>
@@ -215,7 +215,7 @@
 		</div>
 
 			<figure>
-					<img src="assets/img/Personal/CA2.png" class="avatar9" alt="">
+					<img src="assets/img/Personal/CA2.png" class="avatar9" alt="Images of other college websites searched.">
 
 					<figcaption align="center"><i>Some website searched</i></figcaption>
 				</figure>
@@ -292,7 +292,7 @@
       <div class="image uppermargin">
 
         <figure>
-            <img src="assets/img/Personal/CRN.png" class="avatar9" alt="">
+            <img src="assets/img/Personal/CRN.png" class="avatar9" alt="Landing Page of the Redesigned Website">
             <figcaption  align="center"><i>Landing Page of the Redesigned Website</i></figcaption>
           </figure>
         </div>
@@ -387,7 +387,7 @@
 				</div>
 				<div class="col-md-6">
 					<figure class="uppermargin3">
-							<img src="assets/img/Personal/Recommendation1.png" class="avatar13" alt="">
+							<img src="assets/img/Personal/Recommendation1.png" class="avatar13" alt="An anotated image of one of the redesign screens">
 						</figure>
 				</div>
 			</div>
