--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -111,7 +111,7 @@
 
 
           <figure>
-              <img src="assets/img/Personal/HA.png" class="avatar9" alt="">
+              <img src="assets/img/Personal/HA.png" class="avatar9" alt="Landing Page of the Redesigned Website">
               <figcaption  align="center"><i>Landing Page of the Redesigned Website</i></figcaption>
 
 
@@ -139,7 +139,7 @@
 <section>
   <div class="container">
     <h3><b>Older Information Architecture</b></h2>
-      <img src="assets/img/Personal/Architecture_Old.png" class="avatar9 uppermargin" alt="">
+      <img src="assets/img/Personal/Architecture_Old.png" class="avatar9 uppermargin" alt="Image showing a chart of the old information architecture.">
     </div>
 </section>
 
@@ -214,7 +214,7 @@
       <div class="image uppermargin">
 
         <figure>
-          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar7 uppermargin" alt="">
+          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar7 uppermargin" alt="Image of a Shared Services Center subpage.">
             <figcaption  align="center"><i>A SSC subpage.</i></figcaption>
           </figure>
         </div>
@@ -249,7 +249,7 @@
           </div>
       </div>
       <div class="col-md-6 uppermargin countermargin"  style="color:#000">
-        <img src="assets/img/Personal/NPS.png" class="img-fluid" alt="">
+        <img src="assets/img/Personal/NPS.png" class="img-fluid" alt="Image of human stick figures.">
         <div align="center">
 
 
@@ -310,7 +310,7 @@
   <section>
     <div class="container">
       <h3><b>New Information Architecture</b></h2>
-        <img src="assets/img/Personal/Architecture_New.png" class="avatar9 uppermargin" alt="">
+        <img src="assets/img/Personal/Architecture_New.png" class="avatar9 uppermargin" alt="Image of a chart depicting the new information architecture.">
       </div>
   </section>
 
@@ -321,7 +321,7 @@
       <p class="justified paragraph">Through observations and incorporating quantitative data, the team managed to improve the <b class="textbackground3"> NPS from 30 - 50</b>. </p>
       <p class="justified paragraph">Increase the number of users over a period of 6 months to an all time high of <b class="textbackground3">181 users </b> for a single month. </p>
 
-      <img src="assets/img/Personal/UserData.png" class="img-fluid uppermargin" alt="">
+      <img src="assets/img/Personal/UserData.png" class="img-fluid uppermargin" alt="Image showing user data.">
 
       <p class="justified paragraph"> The page views have been consistent and the <b class="textbackground3"> bounce rates came to stand at an all time low of 27%. </b> </p>
 
