--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -118,7 +118,7 @@
 		We determined the features from interviews conducted with blind joggers and runners.</p>
 
 
-			<img src="assets/img/Personal/prototype_color.png" class="avatar9 uppermargin" alt="">
+			<img src="assets/img/Personal/prototype_color.png" class="avatar9 uppermargin" alt="An image of the prototype">
 
 		<p class="justified paragraph"><b class="textbackground3"> TRIDENT </b> stands for Tri-Positional Detection and Navigational Technology. The system's key features include:
 			<ul class="paragraph">
@@ -256,7 +256,7 @@
 
 
 			<figure>
-					<img src="assets/img/Personal/CA.png" class="img-fluid" alt="">
+					<img src="assets/img/Personal/CA.png" class="img-fluid" alt="A sample excel sheet showing the different products in the market">
 
 					<figcaption align="center"><i>Some products in the market</i></figcaption>
 				</figure>
@@ -335,7 +335,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 	<h3 class="uppermargin3" align="center"><Strong>PERSONA</Strong></h3>
 					<figure>
-							<img src="assets/img/Personal/Omar Persona.png" class="avatar7" alt="">
+							<img src="assets/img/Personal/Omar Persona.png" class="avatar7" alt="Image containing a user persona.">
 
 							<figcaption align="center"><i>Persona</i></figcaption>
 					</figure>
@@ -360,7 +360,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 			</p>
 			<div class=" uppermargin bottompadding ">
 				<figure>
-						<img src="assets/img/Personal/Users.png" class="img-fluid " alt="">
+						<img src="assets/img/Personal/Users.png" class="img-fluid " alt="Affinity map populating the themes from the qualitative study.">
 
 						<figcaption align="center"><i>Ideation methods</i></figcaption>
 					</figure>
@@ -408,14 +408,14 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 									</div>
 									<div class="col-md-6">
-										<img src="assets/img/Personal/prototype_color.png" class="img-fluid" alt="">
+										<img src="assets/img/Personal/prototype_color.png" class="img-fluid" alt="Front side image of the prototype device. Device consists of three sensors in the front with buzzers attached to the back.">
 									</div>
 
 									<div class="col-md-6">
 										 <p class="justified paragraph">We named the device, the TRIDENT. <b class="textbackground3">TRIDENT</b> stands <b class ="textbackground3"> for Tri-Positional Detection and Navigational Technology.</b></p>
 									</div>
 									<div class="col-md-6">
-										 <img src="assets/img/Personal/Prototype_back.png" class="img-fluid" alt="">
+										 <img src="assets/img/Personal/Prototype_back.png" class="img-fluid" alt="Rear image of the prototype device. Device consists of three sensors in the front with buzzers attached to the back.">
 									</div>
 								</div>
 							</div>
