--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
 
         <a href="navigational-aid.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
 
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt=""></div></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt="Image of the device that aids blind runners."></div></div>
           </div>
     </section>
 
@@ -103,7 +103,7 @@
 
         <a href="coeit-ssc.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
       </div>
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt=""></div></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt="Image showing the revamped website inside a mockup of a MacBook pro."></div></div>
           </div>
     </section>
 
@@ -118,7 +118,7 @@
 
       <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
     </div>
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt=""></div></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt="Image showing the revamped COEIT website inside a mockup of a MacBook pro."></div></div>
           </div>
     </section>
 
@@ -132,7 +132,7 @@
 
           <a href="mobileapp.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
       </div>
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/appdc.png" class="avatar7 uppermargin3" alt=""></div></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/appdc.png" class="avatar7 uppermargin3" alt="Mobile phone showing one of the application screens."></div></div>
           </div>
     </section>
 
