--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -360,7 +360,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 			</p>
 			<div class=" uppermargin bottompadding ">
 				<figure>
-						<img src="assets/img/Personal/Users.png" class="img-fluid " alt="Affinity map populating the themes from the qualitative study.">
+						<img src="assets/img/Personal/Users.png" class="img-fluid " alt="Bodystorming, Affinity maps and Scenarios to aid in populating the themes from the qualitative study.">
 
 						<figcaption align="center"><i>Ideation methods</i></figcaption>
 					</figure>
